changes to add tabs to header page

--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -18,6 +18,34 @@
           </ul>
         </nav>
       </div>
+      <div class="moj-header__content">
+        <div class="govuk-grid-column-two-thirds">
+          <h1 class="govuk-label-wrapper">
+            <label class="govuk-heading-l govuk-!-margin-bottom-2" for="search">
+              Search for an email address or activation key
+            </label>
+          </h1>
+        </div>
+      </div>
     </div>
   </header>
+  <div class="moj-header__container">
+    <div class="govuk-tabs" data-module="govuk-tabs">
+      <h2 class="govuk-tabs__title">
+        Contents
+      </h2>
+      <ul class="govuk-tabs__list">
+        <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+          <a class="govuk-tabs__tab" href="/">
+            Find a key or email address
+          </a>
+        </li>
+        <li class="govuk-tabs__list-item">
+          <a class="govuk-tabs__tab" href="/stats">
+            Measuring impact
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>  
 {{ end }}
