--- a/service-admin/web/templates/result_actor.partial.gohtml
+++ b/service-admin/web/templates/result_actor.partial.gohtml
@@ -15,6 +15,19 @@
 
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
+        User Id
+      </dt>
+      <dd class="govuk-summary-list__value">
+        {{ if .ID }}
+          {{ .ID }}
+        {{ else }}
+          Never
+        {{ end }}
+      </dd>
+    </div>
+
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
         Last Login
       </dt>
       <dd class="govuk-summary-list__value">
