--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -20,4 +20,23 @@
       </div>
     </div>
   </header>
+  <div class="moj-header__container">
+    <div class="govuk-tabs" data-module="govuk-tabs">
+      <h2 class="govuk-tabs__title">
+        Contents
+      </h2>
+      <ul class="govuk-tabs__list">
+        <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+          <a class="govuk-tabs__tab" href="/">
+            Find a key or email address
+          </a>
+        </li>
+        <li class="govuk-tabs__list-item">
+          <a class="govuk-tabs__tab" href="/stats">
+            Measuring impact
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>  
 {{ end }}
