make pdf style correctly

--- a/service-front/web/src/pdf.scss
+++ b/service-front/web/src/pdf.scss
@@ -1,3 +1,5 @@
+@import '../dist/stylesheets/gds.css';
+
 @font-face {
   font-family: 'GDS Transport';
   src: url('../node_modules/govuk-frontend/govuk/assets/fonts/light-94a07e06a1-v2.woff2')
