update to work with ie11

--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -169,7 +169,7 @@
     </div>
 </footer>
 
-<script type="module" src="{{ asset('index.js') }}"></script>
+<script src="{{ asset('index.js') }}"></script>
 {% block javascript %}{% endblock %}
 </body>
 </html>
