changed cookie name in cookie page

--- a/service-front/app/src/Common/templates/common/cookies.html.twig
+++ b/service-front/app/src/Common/templates/common/cookies.html.twig
@@ -51,7 +51,7 @@
                     <td class="govuk-table__cell">{% trans %}1 year{% endtrans %}</td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">{% trans %}session{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}__Host-session{% endtrans %}</td>
                     <td class="govuk-table__cell">{% trans %}Used to remember your progress through the service{% endtrans %}</td>
                     <td class="govuk-table__cell">{% trans %}24 hours{% endtrans %}</td>
                 </tr>
