--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -5,8 +5,39 @@
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Measuring Impact</h1>
-      <p class="govuk-body">USE LPA Statistics</p>
+      <h1 class="govuk-heading-xl">USE LPA Statistics</h1>
     </div>
   </div>
+
+  <table class="govuk-table">
+  <caption class="govuk-table__caption govuk-table__caption--m">Showing statistics for LPAs added</caption>
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header">Total</th>
+      <th scope="col" class="govuk-table__header">Current Month</th>
+      <th scope="col" class="govuk-table__header">Previous Month</th>
+      <th scope="col" class="govuk-table__header">2 months previous</th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Number of LPAs added</th>
+      <th scope="row" class="govuk-table__header"></th>
+      <th scope="row" class="govuk-table__header"></th>
+      <th scope="row" class="govuk-table__header"></th>
+      <th scope="row" class="govuk-table__header"></th>
+    </tr>
+  </tbody>
+</table>
+  
+  {{ if .Result }}
+  <div class="govuk-grid-row govuk-!-margin-top-6">
+    <div class="govuk-grid-column-two-thirds">
+      <p class="govuk-body"><strong>LPAs added test</strong></p>
+      {{ template "result_lpas_added" .Result }}
+    </div>
+  </div>
+  {{ end }}
+  
 {{ end }}
