--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -9,35 +9,49 @@
     </div>
   </div>
 
-  <table class="govuk-table">
-  <caption class="govuk-table__caption govuk-table__caption--m">Showing statistics for LPAs added</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header"></th>
-      <th scope="col" class="govuk-table__header">Total</th>
-      <th scope="col" class="govuk-table__header">Current Month</th>
-      <th scope="col" class="govuk-table__header">Previous Month</th>
-      <th scope="col" class="govuk-table__header">2 months previous</th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Number of LPAs added</th>
-      <th scope="row" class="govuk-table__header"></th>
-      <th scope="row" class="govuk-table__header"></th>
-      <th scope="row" class="govuk-table__header"></th>
-      <th scope="row" class="govuk-table__header"></th>
-    </tr>
-  </tbody>
-</table>
-  
-  {{ if .Result }}
-  <div class="govuk-grid-row govuk-!-margin-top-6">
-    <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body"><strong>LPAs added test</strong></p>
-      {{ template "result_lpas_added" .Result }}
-    </div>
-  </div>
+{{ if .Result }}
+<table class="govuk-table">
+<thead class="govuk-table__head">
+<tr>
+  <th scope="col" class="govuk-table__header"></th>
+  <th scope="col" class="govuk-table__header">2 months previous</th>
+  <th scope="col" class="govuk-table__header">Previous Month</th>  
+  <th scope="col" class="govuk-table__header">Current Month</th>
+  <th scope="col" class="govuk-table__header">Total</th>
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of LPAs added</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .lpas_added }}</th>
   {{ end }}
-  
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of LPAs removed</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .lpa_removed_event }}</th>
+  {{ end }}
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of account created</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .account_created_event }}</th>
+  {{ end }}
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of account deleted</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .account_deleted_event }}</th>
+  {{ end }}
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of account activated</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .account_activated_event }}</th>
+  {{ end }}
+</tr>
+ 
+</thead>
+</table>
+{{end}}
+
 {{ end }}
