--- a/service-front/app/src/Actor/templates/actor/check-your-answers.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-your-answers.html.twig
@@ -54,19 +54,35 @@
                                 </a>
                             </dd>
                         </div>
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                {% trans %}Postcode{% endtrans %}
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                {{ data.postcode }}
-                            </dd>
-                            <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" id="change-postcode" href="{{ path('lpa.postcode') }}">
-                                    {% trans %}Change<span class="govuk-visually-hidden"> postcode</span>{% endtrans %}
-                                </a>
-                            </dd>
-                        </div>
+                        {% if data.live_in_uk == 'Yes' %}
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    {% trans %}Postcode{% endtrans %}
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    {{ data.postcode }}
+                                </dd>
+                                <dd class="govuk-summary-list__actions">
+                                    <a class="govuk-link" id="change-postcode" href="{{ path('lpa.postcode') }}">
+                                        {% trans %}Change<span class="govuk-visually-hidden"> postcode</span>{% endtrans %}
+                                    </a>
+                                </dd>
+                            </div>
+                        {% else %}
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    {% trans %}Do you live in the UK?{% endtrans %}
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    {{ data.live_in_uk }}
+                                </dd>
+                                <dd class="govuk-summary-list__actions">
+                                    <a class="govuk-link" id="change-postcode" href="{{ path('lpa.postcode') }}">
+                                        {% trans %}Change<span class="govuk-visually-hidden"> postcode</span>{% endtrans %}
+                                    </a>
+                                </dd>
+                            </div>
+                        {% endif %}
                     </dl>
 
                     {% if not feature_enabled('allow_older_lpas') %}
