--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
@@ -22,30 +22,36 @@
                     <h1 class="govuk-heading-xl">{% trans %}We need some more details{% endtrans %}</h1>
                     <p class="govuk-body">{% trans %}We need a few extra details to make sure we have the right LPA for your activation key request.{% endtrans %}</p>
                     <h2 class="govuk-heading-l">{% trans %}What is your current address?{% endtrans %}</h2>
-                    <p class="govuk-body">{% trans with {'%postcode%': postcode } %}You've already given your postcode as %postcode%{% endtrans %}
-                    <p class="govuk-body">{% trans %}Your activation key will be posted to this address.{% endtrans %}</p>
-
                     {{ govuk_form_element(form.get('__csrf')) }}
+                    {% if live_in_uk == 'No' %}
+                        {{ govuk_form_element(form.get('actor_abroad_address'), {
+                            'label': 'Address' | trans,
+                            'autocomplete': 'street-address',
+                        }) }}
+                    {% else %}
+                        <p class="govuk-body">{% trans with {'%postcode%': postcode } %}You've already given your postcode as %postcode%{% endtrans %}
+                        <p class="govuk-body">{% trans %}Your activation key will be posted to this address.{% endtrans %}</p>
+                        {{ govuk_form_element(form.get('actor_address_1'), {
+                            'label': 'Address line 1' | trans,
+                            'autocomplete': 'address-line1',
+                        }) }}
 
-                    {{ govuk_form_element(form.get('actor_address_1'), {
-                        'label': 'Address line 1' | trans,
-                        'autocomplete': 'address-line1',
-                    }) }}
+                        {{ govuk_form_element(form.get('actor_address_2'), {
+                            'label': 'Address line 2 (optional)' | trans,
+                            'autocomplete': 'address-line2',
+                        }) }}
 
-                    {{ govuk_form_element(form.get('actor_address_2'), {
-                        'label': 'Address line 2 (optional)' | trans,
-                        'autocomplete': 'address-line2',
-                    }) }}
+                        {{ govuk_form_element(form.get('actor_address_town'), {
+                            'label': 'Town or city' | trans,
+                            'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level1'}
+                        }) }}
 
-                    {{ govuk_form_element(form.get('actor_address_town'), {
-                        'label': 'Town or city' | trans,
-                        'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level1'}
-                    }) }}
+                        {{ govuk_form_element(form.get('actor_address_county'), {
+                            'label': 'County (optional)' | trans,
+                            'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level2'}
+                        }) }}
 
-                    {{ govuk_form_element(form.get('actor_address_county'), {
-                        'label': 'County (optional)' | trans,
-                        'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level2'}
-                    }) }}
+                    {% endif %}
 
                     {% set value_yes =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_YES') %}
                     {% set value_no =  constant('Actor\\Workflow\\RequestActivationKey::ACTOR_ADDRESS_SELECTION_NO') %}
