--- a/service-front/app/src/Common/templates/partials/govuk_form.html.twig
+++ b/service-front/app/src/Common/templates/partials/govuk_form.html.twig
@@ -111,7 +111,7 @@
                 {%- if option.conditionalContent is defined -%}
                     <div class="govuk-radios__item govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-{{ element.getName() }}-{{ loop.index }}">
                         {%-  for content in option.conditionalContent -%}
-                            <p class="govuk-body">{{ content }}</p>
+                            {{ content | raw }}
                         {%- endfor -%}
                     </div>
                 {%- endif -%}
