--- a/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
+++ b/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
@@ -54,6 +54,7 @@
 {% trans %}Enter your first names{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter your last name{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter your postcode{% context %}error{% notes %}Add Older LPA{% endtrans %}
+{% trans %}Select yes if you live in the UK{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter your address{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter your town or city{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Select whether you are the donor or an attorney on the LPA{% context %}error{% notes %}Add Older LPA{% endtrans %}
