--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -5,8 +5,76 @@
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Measuring Impact</h1>
-      <p class="govuk-body">USE LPA Statistics</p>
+      <h1 class="govuk-heading-xl">USE LPA Statistics</h1>
     </div>
   </div>
+
+{{ if .Result }}
+<table class="govuk-table">
+<thead class="govuk-table__head">
+<tr>
+  <th scope="col" class="govuk-table__header"></th>
+  <th scope="col" class="govuk-table__header">2 months previous</th>
+  <th scope="col" class="govuk-table__header">Previous Month</th>  
+  <th scope="col" class="govuk-table__header">Current Month</th>
+  <th scope="col" class="govuk-table__header">Total</th>
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of LPAs added</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .lpas_added }}</th>
+  {{ end }}
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of LPAs removed</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .lpa_removed_event }}</th>
+  {{ end }}
+</tr>
+</thead>
+</table>
+
+<table class="govuk-table">
+<thead class="govuk-table__head">
+<tr>
+  <th scope="col" class="govuk-table__header"></th>
+  <th scope="col" class="govuk-table__header">2 months previous</th>
+  <th scope="col" class="govuk-table__header">Previous Month</th>  
+  <th scope="col" class="govuk-table__header">Current Month</th>
+  <th scope="col" class="govuk-table__header">Total</th>
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of account created</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .account_created_event }}</th>
+  {{ end }}
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of account deleted</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .account_deleted_event }}</th>
+  {{ end }}
+</tr>
+</thead>
+</table>
+
+<table class="govuk-table">
+<thead class="govuk-table__head">
+<tr>
+  <th scope="col" class="govuk-table__header"></th>
+  <th scope="col" class="govuk-table__header">2 months previous</th>
+  <th scope="col" class="govuk-table__header">Previous Month</th>  
+  <th scope="col" class="govuk-table__header">Current Month</th>
+  <th scope="col" class="govuk-table__header">Total</th>
+</tr>
+<tr>
+  <th scope="col" class="govuk-table__header">Number of account activated</th>
+  {{ range .Result }}
+    <th scope="col" class="govuk-table__header">{{ .account_activated_event }}</th>
+  {{ end }}
+</tr>
+</thead>
+</table>
+
+{{end}}
 {{ end }}
