--- a/service-front/app/src/Actor/templates/actor/change-email.html.twig
+++ b/service-front/app/src/Actor/templates/actor/change-email.html.twig
@@ -13,7 +13,7 @@
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
             <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
+                <div class="govuk-grid-column-two-thirds">
 
                     {{ govuk_error_summary(form) }}
                     {{ govuk_form_open(form) }}
