--- a/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
@@ -15,7 +15,7 @@
             {{ include('@actor/partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Actor\\Handler\\RemoveLpaHandler::REMOVE_LPA_FLASH_MSG'}) }}
 
             <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
+                <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-xl">{% trans %}Your lasting powers of attorney{% endtrans %}</h1>
                 </div>
             </div>
