--- a/service-front/app/src/Actor/templates/actor/lpa-removed.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-removed.html.twig
@@ -15,7 +15,7 @@
         <main class="govuk-main-wrapper" id="main-content" role="main">
 
             <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
+                <div class="govuk-grid-column-two-thirds">
 
                     <h1 class="govuk-heading-xl">{% trans %}We've removed an LPA from your account{% endtrans %}</h1>
 
