--- a/service-front/app/src/Common/templates/common/instructions-preferences-signed-before-2016.html.twig
+++ b/service-front/app/src/Common/templates/common/instructions-preferences-signed-before-2016.html.twig
@@ -13,7 +13,7 @@
         <main class="govuk-main-wrapper" id="main-content" role="main">
             <div class="govuk-grid-row">
 
-                <div class="govuk-grid-column-full">
+                <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-xl">
                         {% trans %}Preferences and instructions cannot be shown for this LPA{% endtrans %}
                     </h1>
