--- a/service-front/app/src/Viewer/templates/viewer/stats-page.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/stats-page.html.twig
@@ -6,7 +6,7 @@
 
     <main class="govuk-main-wrapper">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
+            <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-xl">LPA Statistics</h1>
 
