--- a/service-front/app/src/Actor/templates/actor/activation-key-request-received.html.twig
+++ b/service-front/app/src/Actor/templates/actor/activation-key-request-received.html.twig
@@ -23,8 +23,7 @@
                     <p class="govuk-body">{% trans %}We'll contact you if we need any more information.{% endtrans %}</p>
                     <p class="govuk-body">{% trans %}Once you've got the activation key, you'll be able to use it to add the LPA to your account.{% endtrans %}</p>
                     <p class="govuk-body">{% trans %}We've sent you an email to confirm all these details.{% endtrans %}</p>
-                    <h2 class="govuk-heading-l">{% trans with {'%date%': lpa_date(date)} %}We'll contact you by %date%{% endtrans %}</h2>
-                    <p class="govuk-body">{% trans with {'%date%': lpa_date(date)} %}You should hear from us or get the activation key letter by %date%. If you don't, please contact us. You'll need to give the LPA reference number when you get in touch.{% endtrans %}</p>
+                    <p class="govuk-body">{% trans with {'%date%': lpa_date(date)} %}Most people hear from us or get the activation key within 2 weeks of requesting it. However, sometimes it can take a bit longer. If you have not heard from us by %date%, please get in touch.{% endtrans %}</p>
 
                     {{ include('@partials/contact-details/email.html.twig') }}
                     {{ include('@partials/contact-details/telephone.html.twig') }}
