--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -21,9 +21,31 @@
                 </div>
 
                 <div class="govuk-grid-column-two-thirds">
-                        <p class="govuk-body">{% trans %}If an <abbr title="lasting power of attorney">LPA</abbr> has instructions or preferences we cannot show these online. Organisations might ask to see the paper <abbr title="lasting power of attorney">LPA</abbr> so that they can read the instructions and preferences.{% endtrans %}</p>
-                        <p class="govuk-body">{% trans %}In some older LPAs, instructions and preferences are called 'restrictions and conditions'.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}If an <abbr title="lasting power of attorney">LPA</abbr> has instructions or preferences we cannot show these online.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}Organisations may ask to see the paper <abbr title="lasting power of attorney">LPA</abbr> so that they can find out what the instructions or preferences are.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}On most LPAs, you’ll find the instructions and LPAs on sections 7.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}On some LPAs made in or before 2015, instructions and preferences are called ‘restrictions and conditions’. You’ll find them on page 9 of the <abbr title="lasting power of attorney">LPA</abbr>.{% endtrans %}</p>
+                    <p class="govuk-body">{% trans %}In some older LPAs, instructions and preferences are called 'restrictions and conditions'.{% endtrans %}</p>
                 </div>
+
+                <details class="govuk-details" data-module="govuk-details" data-gaEventType="onClick" data-gaAction="Details" data-gaCategory="Service Information" data-gaLabel="I do not have the paper LPA">
+                    <summary class="govuk-details__summary" role="button" >
+                            <span class="govuk-details__summary-text">
+                              {% trans %}I do not have the paper LPA{% endtrans %}
+                            </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                        <p>{% trans %}When an LPA is registered, we post the LPA to either:{% endtrans %}</p>
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li>{% trans %}the donor (the person the <abbr title="lasting power of attorney">LPA</abbr> is for){% endtrans %}</li>
+                            <li>{% trans %}one of the attorneys{% endtrans %}</li>
+                            <li>{% trans %}someone else, like a solicitor, who helped to fill in the <abbr title="lasting power of attorney">LPA</abbr> form{% endtrans %}</li>
+                        </ul>
+
+                        <p>{% trans %}Check with these people to see who has the <abbr title="lasting power of attorney">LPA</abbr>.{% endtrans %}</p>
+                        <p>{% trans %}If you need more than one copy of the paper <abbr title="lasting power of attorney">LPA</abbr>, the donor or solicitor can make <strong><a href="https://www.gov.uk/power-of-attorney/certify" class="govuk-link">certified copies</a></strong>.{% endtrans %}</p>
+                    </div>
+                </details>
             </div>
         </main>
         {{ include('@actor/partials/new-use-service.html.twig') }}
