misalignment on page

--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -30,9 +30,9 @@
 
                 <details class="govuk-details" data-module="govuk-details" data-gaEventType="onClick" data-gaAction="Details" data-gaCategory="Service Information" data-gaLabel="I do not have the paper LPA">
                     <summary class="govuk-details__summary" role="button" >
-                            <span class="govuk-details__summary-text">
-                              {% trans %}I do not have the paper LPA{% endtrans %}
-                            </span>
+                        <span class="govuk-details__summary-text">
+                            {% trans %}I do not have the paper LPA{% endtrans %}
+                        </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p>{% trans %}When an LPA is registered, we post the LPA to either:{% endtrans %}</p>
@@ -41,7 +41,8 @@
                             <li>{% trans %}one of the attorneys{% endtrans %}</li>
                             <li>{% trans %}someone else, like a solicitor, who helped to fill in the <abbr title="lasting power of attorney">LPA</abbr> form{% endtrans %}</li>
                         </ul>
-
+                    </div>
+                    <div>
                         <p>{% trans %}Check with these people to see who has the <abbr title="lasting power of attorney">LPA</abbr>.{% endtrans %}</p>
                         <p>{% trans %}If you need more than one copy of the paper <abbr title="lasting power of attorney">LPA</abbr>, the donor or solicitor can make <strong><a href="https://www.gov.uk/power-of-attorney/certify" class="govuk-link">certified copies</a></strong>.{% endtrans %}</p>
                     </div>
