removed all password rules and just having to have 12 characters or more

--- a/service-front/app/src/Actor/templates/actor/create-account.html.twig
+++ b/service-front/app/src/Actor/templates/actor/create-account.html.twig
@@ -44,7 +44,7 @@
 
                                 {{ govuk_form_element(form.get('show_hide_password'), {
                                     'label': 'Create a password'| trans,
-                                    'hint': 'Your password needs to have at least: <ul class="govuk-list--bullet"><li>8 characters</li><li>1 lower-case and 1 capital letter</li><li>1 number</li></ul>'| trans,
+                                    'hint': 'Your password needs to have at least 12 characters'| trans,
                                     'attr': { 'class': 'govuk-input moj-password-reveal__input govuk-input--width-20' }
                                 })
                                 }}
