change dashboard to say no active codes rather than no organisations have access, say nothing when no codes have been made

--- a/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
@@ -68,6 +68,7 @@
                             {% set actorToken = lpaData['user-lpa-actor-token'] %}
                             {% set actorActive = lpaData['actorActive'] %}
                             {% set activeCodeCount = lpaData['activeCodeCount'] %}
+                            {% set shareCodes = lpaData['shareCodes'] %}
                             {% set caseSubtype = lpa.caseSubtype == 'pfa' ? 'Property and finance'| trans : 'Health and welfare'| trans %}
                             {% set applicationHasRestrictions = lpa.applicationHasRestrictions %}
                             {% set applicationHasGuidance = lpa.applicationHasGuidance %}
