--- a/service-front/app/src/Actor/templates/actor/partials/lpa-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/lpa-details.html.twig
@@ -28,6 +28,7 @@
             <span class="moj-badge moj-badge--large moj-badge--blue govuk-!-margin-bottom-2">
                 {% trans count activeCodeCount %}%count% active code|%count% active codes{% endtrans %}
             </span>
+        {# shareCodes array contains activecodecount as an item so we need to factor in this when checking if empty #}
         {% elseif actorActive and shareCodes|length > 1 %}
             <span class="moj-badge moj-badge--large moj-badge--grey govuk-!-margin-bottom-2">
                 {% trans  %}No active codes{% endtrans %}
