--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>{% block html_title %}{% trans %}GOV.UK{% endtrans %}{% endblock %}</title>
+    <link rel="preload" href="assets/fonts/bold-b542beb274-v2.woff2" as="font" type="font/woff2" />
+    <link rel="preload" href="assets/fonts/light-94a07e06a1-v2.woff2" as="font" type="font/woff2" />
     <link rel="preload" href="{{ asset('stylesheets/main.css') }}" as="style" />
     <link rel="preload" href="{{ asset('index.js') }}" as="script" />
     <link rel="preconnect" href="//www.google-analytics.com" />
