--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -86,6 +86,24 @@
     <th scope="col" class="govuk-table__header">Total</th>
   </tr>
   <tr>
+    <th scope="col" class="govuk-table__header">Number of access codes created</th>
+    {{ range .Result }}
+      <th scope="col" class="govuk-table__header">{{ .viewer_codes_created }}</th>
+    {{ end }}
+  </tr>
+  </thead>
+  </table>
+
+<table class="govuk-table">
+  <thead class="govuk-table__head">
+  <tr>
+    <th scope="col" class="govuk-table__header"></th>
+    <th scope="col" class="govuk-table__header">2 months previous</th>
+    <th scope="col" class="govuk-table__header">Previous Month</th>  
+    <th scope="col" class="govuk-table__header">Current Month</th>
+    <th scope="col" class="govuk-table__header">Total</th>
+  </tr>
+  <tr>
     <th scope="col" class="govuk-table__header">Successful Code Views</th>
     {{ range .Result }}
       <th scope="col" class="govuk-table__header">{{ .view_lpa_share_code_success_event }}</th>
