--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -85,18 +85,9 @@
       <th scope="col" class="govuk-table__header">{{ .viewer_codes_created }}</th>
     {{ end }}
   </tr>
-  </thead>
- 
-  <thead class="govuk-table__head">
+
   <tr>
-    <th scope="col" class="govuk-table__header"></th>
-    <th scope="col" class="govuk-table__header">2 months previous</th>
-    <th scope="col" class="govuk-table__header">Previous Month</th>  
-    <th scope="col" class="govuk-table__header">Current Month</th>
-    <th scope="col" class="govuk-table__header">Total</th>
-  </tr>
-  <tr>
-    <th scope="col" class="govuk-table__header">Successful Code Views</th>
+    <th scope="col" class="govuk-table__header">Number of access code Views</th>
     {{ range .Result }}
       <th scope="col" class="govuk-table__header">{{ .view_lpa_share_code_success_event }}</th>
     {{ end }}
