number of access code views should look at event viewer codes viewed

--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -89,7 +89,7 @@
   <tr>
     <th scope="col" class="govuk-table__header">Number of access code Views</th>
     {{ range .Result }}
-      <th scope="col" class="govuk-table__header">{{ .view_lpa_share_code_success_event }}</th>
+      <th scope="col" class="govuk-table__header">{{ .viewer_codes_viewed }}</th>
     {{ end }}
   </tr>
   </thead>
