show not applicable in email row when a used activation key has been serached for and the lpa is deleted

--- a/service-admin/web/templates/result_code.partial.gohtml
+++ b/service-admin/web/templates/result_code.partial.gohtml
@@ -18,16 +18,21 @@
       </dd>
     </div>
 
-    {{ if .Email }}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
         Email
       </dt>
-      <dd class="govuk-summary-list__value">
+      {{ if .Email }}
+        <dd class="govuk-summary-list__value">
           {{ .Email }}
-      </dd>
+        </dd>
+      {{ else }}
+        <dd class="govuk-summary-list__value">
+          Not applicable
+        </dd>    
+      {{ end }}
     </div>
-    {{ end }}
+    
 
     {{ if .ActivationKey }}
 
