test cleanup and UI changes

--- a/service-admin/web/templates/result_lpa.partial.gohtml
+++ b/service-admin/web/templates/result_lpa.partial.gohtml
@@ -10,27 +10,28 @@
     </div>
 
     {{ if .AddedBy }}
+    {{ range .AddedBy }}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        Details
+        Added by
       </dt>
       <dd class="govuk-summary-list__value">
         <ul class="govuk-list">
-        {{ range .AddedBy }}
           <li>{{ .Email }}{{ if .ActivateBy }}<strong class="govuk-tag govuk-tag--grey">key requested</strong>{{ end }}</li>
-          <li class="govuk-hint govuk-!-margin-bottom-2">{{ .DateAdded | readableDateTime }}</li>
-           <li>
-           {{ if not .ActivateBy  }}
-                {{ .DateUpdated | readableDateTime }}
-           {{ else }}
-                {{ "Not activated" }}
-           {{ end }}
-           </li>
-        {{ end }}
+          <li>Added on:   {{ .DateAdded | readableDateTime }}</li>
+          <li> Activated on:
+          {{ if not .ActivateBy  }}
+            {{ .DateAdded | readableDateTime }}
+          {{ else if not .DateUpdated  }}
+            {{ "Not activated" }}
+          {{ else }}
+            {{ .DateUpdated | readableDateTime }}
+          {{ end }}
+          </li>
         </ul>
       </dd>
     </div>
-
+    {{ end }}
     {{ end }}
   </dl>
 {{ end }}
