Added one more option to your role page and changes in handler

--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-role.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-role.html.twig
@@ -42,6 +42,11 @@
                                         'label': 'I am an \'attorney\''|trans,
                                         'hint': 'An attorney is appointed by the donor to make decisions on the donor\'s behalf.'| trans,
                                         'value': 'Attorney'
+                                    },
+                                    {
+                                        'label': 'I am a \'replacement attorney\''|trans,
+                                        'hint': 'A replacement attorney is appointed by the donor to step in for an attorney if they can no longer act on the donor\'s behalf.'| trans,
+                                        'value': 'ReplacementAttorney'
                                     }
                                 ]}
                             ) }}
