--- a/service-front/app/src/Actor/templates/actor/request-activation-key/stop-replacement-attorney.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/stop-replacement-attorney.html.twig
@@ -41,6 +41,8 @@
                             You must <a href="%link%" class="govuk-link">let us know if you have become an active attorney</a>. Once we’ve updated our records to show you are an active attorney, you’ll be able to request an activation key.
                         {% endtrans %}
                     </p>
+
+                    <a href="{{ path('lpa.dashboard') }}" draggable="false" class="govuk-button">{% trans %}Back to your LPAs{% endtrans %}</a>
                 </div>
             </div>
         </main>
